<resources>
    <string name="app_name">GameTaskforHeadsAndHands</string>
    <string name="title_rule_game">Добро пожаловать!</string>
    <string name="description_plot">По легенде под известной Одинокой горой ветвяться серия запутанных пещер, на глубине которых лежат сокровища гномов. Но добраться до них не так просто, кроме темных и сводящих с ума каменных стен, там обитают множество монстров! И это место погубило уже множество жизней. Вы как бестрашный охотник за приключениями решаетесь войти в темные глубины земли. Вам необходимо пройти всех монстров, добраться до сокровищ и стать настоящим мастером Подземелья!</string>
    <string name="start_game">НАЧАТЬ ИГРУ!</string>
    <string name="input_name">Введите имя:</string>
    <string name="title_skills">Навыки:</string>
    <string name="attack_hero">Атака: %s</string>
    <string name="defence_hero">Защита: %s</string>
    <string name="health_hero">Здоровье: %s</string>
    <string name="min_damage_hero">Мин. урон: %s</string>
    <string name="max_damage_hero">Макс. урон: %s</string>
    <string name="count_skills">Очков навыка: %s</string>
    <string name="continue_game">Продолжить</string>
    <string name="warn_have_skills_point">Не распеределны очки таланта</string>
    <string name="warn_no_have_health_point">Аптечка пуста</string>
    <string name="attack_entities">%s A %s</string>
    <string name="defence_entities">%s Def %s</string>
    <string name="health_entities">%s H %s</string>
    <string name="damage_entities">%s-%s Dmg %s-%s</string>
    <string name="hero_name">%s</string>
    <string name="name_monster">%s</string>
    <string name="dice_roll">Бросок кубика: %s</string>
    <string name="success_dice_roll">%s</string>
    <string name="hit">Удар: %s ед. урона</string>
    <string name="use_heal">Использовать аптечку</string>
    <string name="button_continue_game">Продолжить</string>
    <string name="rip">ВЫ ПОГИБЛИ</string>
    <string name="win">ПОБЕДА</string>
    <string name="buttonEasy">Легкий</string>
    <string name="buttonMedium">Средний</string>
    <string name="buttonHard">Тяжелый</string>
    <string name="сhoose_level">Выберите уровень сложности:</string>
    <string name="increase_level">УБИЙСТВО\nУровень повышен!</string>
    <string name="retry_game">Попробовать снова</string>
    <string name="tvDescriptionRip">В ожесточенной схватке с монстром вы получили глубочайшие порезы по всему телу! Вы стараетесь убежать с поле битвы и вам это удается. Ваш противник остался где-то далеко позади. Но в спешке вы бежали куда глаза глядят и теперь не знаете где выход. У вас сильное кровотечение и силы покидают вас, надежды больше нет. Увы! Но судьба распорядилась вами не так как вы хотели… Мечты о сокровище и беспечной жизни теперь сгинут вместе с вами в кругу голодных крыс.</string>
    <string name="description_win">Вы после ожесточенных боев, весь в грязи и чужой крови, всё таки добираетесь до сокровища! И с победным криком вы чуть ли не ныряете в золотое море монет, усыпанного чуть ли не по пояс. Тут столько богатства, что хватит на всю жизнь! Вы cможете позволить себе, всё что захотите! Только Представьте: ВСЁ что захотите. Что это? Дорогой автомобиль? Бордель? Или целый остров? Даже может выплатить ипотеку? </string>
    <string name="description_win_2">Но в неудержимой радости и мечтах вы забываете дорогу назад… И когда понимаете это, тухнет факел и вы остаетесь один, в глухой тьме на самой глубине пещеры, где вас никто не найдет… </string>
</resources>