<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backmenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelActivity">

        <TextView
            android:id="@+id/textView3"
            style="@style/ButtonLevel"
            android:gravity="center"
            android:text="@string/сhoose_level"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonEasy"
            style="@style/ButtonLevel"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/buttonEasy" />

        <Button
            android:id="@+id/buttonMedium"
            style="@style/ButtonLevel"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/buttonMedium" />

        <Button
            android:id="@+id/buttonHard"
            style="@style/ButtonLevel"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/buttonHard" />

    </LinearLayout>
</ScrollView>